App layout overflow solved

--- a/src/App.less
+++ b/src/App.less
@@ -76,3 +76,6 @@
   font-size: 20px;
   color: black;
 }
+.ant-layout{
+  overflow: hidden;
+}
